--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,46 +1,47 @@
-<!-- Carousel
-    ================================================== -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
-
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img class="first-slide img-fluid slider-img" src="../../../assets/home/carousel/trondheim-2074284_1280.jpg" alt="First slide">
+    <div class="carousel-item active">
+      <img class="first-slide" src="../../../assets/home/carousel/trondheim-2074284_1280.jpg" alt="First slide">
       <div class="container">
         <div class="carousel-caption">
           <a class="btn btn-lg btn-primary" [routerLink]="['/about']" role="button">Learn More!</a>
         </div>
       </div>
     </div>
-    <div class="item">
-      <img class="second-slide img-fluid slider-img" src="../../../assets/home/carousel/norway-2068857_1280_1280x731.jpg" alt="Second slide">
-    </div>
-    <div class="item">
-      <img class="third-slide img-fluid slider-img" src="../../../assets/home/carousel/nidaros-cathedral-2074343_1280_1280x731.jpg"
-        alt="Third slide">
-        <div class="container">
-          <div class="carousel-caption">
-            <a class="btn btn-lg btn-primary" [routerLink]="['/products']" role="button">Check it out!</a>
-          </div>
+    <div class="carousel-item">
+      <img class="second-slide" src="../../../assets/home/carousel/norway-2068857_1280_1280x731.jpg" alt="Second slide">
+      <div class="container">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>Another example headline.</h1>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
+            Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
         </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="third-slide" src="../../../assets/home/carousel/nidaros-cathedral-2074343_1280_1280x731.jpg" alt="Third slide">
+      <div class="container">
+        <div class="carousel-caption">
+          <a class="btn btn-lg btn-primary" [routerLink]="['/products']" role="button">Check it out!</a>
+        </div>
+      </div>
     </div>
   </div>
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
 </div>
-<!-- /.carousel -->
 
 <hr>
 
