--- a/angular-src/src/app/components/about/about.component.html
+++ b/angular-src/src/app/components/about/about.component.html
@@ -7,8 +7,8 @@
 
 <h2>Businesses</h2>
 <hr>
-<div class="container center-div clients-container">
-  <div class="card col-lg-4">
+<div class="card-group clients-card-group">
+  <div class="card col-lg-4 col-md-6">
     <img class="card-img-top" src="../../../assets/clients/animal-1260334_640.jpg" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">International Bird Federation</h4>
@@ -18,7 +18,7 @@
       </p>
     </div>
   </div>
-  <div class="card col-lg-4">
+  <div class="card col-lg-4 col-md-6">
     <img class="card-img-top" src="../../../assets/clients/cat-2083492_640.jpg" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Card title</h4>
@@ -27,7 +27,91 @@
       </p>
     </div>
   </div>
-  <div class="card col-lg-4">
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/fallow-deer-602253_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/animal-1260334_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">International Bird Federation</h4>
+      <h5>124th Annual Migration</h5>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/cat-2083492_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/fallow-deer-602253_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/animal-1260334_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">International Bird Federation</h4>
+      <h5>124th Annual Migration</h5>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/cat-2083492_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/fallow-deer-602253_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/animal-1260334_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">International Bird Federation</h4>
+      <h5>124th Annual Migration</h5>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
+    <img class="card-img-top" src="../../../assets/clients/cat-2083492_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4 col-md-6">
     <img class="card-img-top" src="../../../assets/clients/fallow-deer-602253_640.jpg" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Card title</h4>
@@ -40,7 +124,79 @@
 
 <h2>Schools</h2>
 <hr>
-<div class="container center-div clients-container">
+<div class="card-group clients-card-group">
+  <div class="card col-lg-4">
+    <img class="card-img-top" src="../../../assets/clients/labrador-805838_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4">
+    <img class="card-img-top" src="../../../assets/clients/richmond-952744_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4">
+    <img class="card-img-top" src="../../../assets/clients/penguin-56101_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4">
+    <img class="card-img-top" src="../../../assets/clients/dachshund-1519374_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4">
+    <img class="card-img-top" src="../../../assets/clients/labrador-805838_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4">
+    <img class="card-img-top" src="../../../assets/clients/richmond-952744_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4">
+    <img class="card-img-top" src="../../../assets/clients/penguin-56101_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
+  <div class="card col-lg-4">
+    <img class="card-img-top" src="../../../assets/clients/dachshund-1519374_640.jpg" alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk of the card's content.
+      </p>
+    </div>
+  </div>
   <div class="card col-lg-4">
     <img class="card-img-top" src="../../../assets/clients/labrador-805838_640.jpg" alt="Card image cap">
     <div class="card-block">
