--- a/angular-src/src/app/components/products/products.component.html
+++ b/angular-src/src/app/components/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div>
   <h1>Our catalogue</h1>
   <p class="lead">
     Check out our bestsellers
@@ -7,72 +7,74 @@
 
 <hr class="featurette-divider">
 
-<div class="row featurette">
-  <div class="col-md-7">
-    <h2 class="featurette-heading">Waxed feathers</h2>
-    <h3><span class="text-muted">Available in 20 colours</span></h3>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
-      cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+<div class="products-featurette-container">
+  <div class="row featurette">
+    <div class="col-md-7 featurette-text-container">
+      <h2 class="featurette-heading">Waxed feathers</h2>
+      <h3><span class="text-muted">Available in 20 colours</span></h3>
+      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
+        cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="featurette-image img-fluid mx-auto" src="../../../assets/products/drake-2028573_640.jpg" alt="Duck">
+    </div>
   </div>
-  <div class="col-md-5">
-    <img class="featurette-image img-responsive center-block" src="../../../assets/products/drake-2028573_640.jpg" alt="Duck">
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7 featurette-text-container">
+      <h2 class="featurette-heading">Bills</h2>
+      <h3><span class="text-muted">Available in 12 sizes</span></h3>
+      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
+        cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="featurette-image img-fluid mx-auto" src="../../../assets/products/duck-525417_640.jpg" alt="Another Duck">
+    </div>
   </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7 featurette-text-container">
+      <h2 class="featurette-heading">Webbed feet</h2>
+      <h3><span class="text-muted">Limited stocks</span></h3>
+      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
+        cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="featurette-image img-fluid mx-auto" src="../../../assets/products/animal-200823_640.jpg" alt="Aww Duck">
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7 featurette-text-container">
+      <h2 class="featurette-heading">Bills v2.0</h2>
+      <h3><span class="text-muted">Now available in 20 sizes</span></h3>
+      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
+        cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="featurette-image img-fluid mx-auto" src="../../../assets/products/duck-525417_640.jpg" alt="Another Duck">
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7 featurette-text-container">
+      <h2 class="featurette-heading">Drake v2</h2>
+      <h3><span class="text-muted">Available in 25 colours</span></h3>
+      <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
+        cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+    </div>
+    <div class="col-md-5">
+      <img class="featurette-image img-fluid mx-auto" src="../../../assets/products/drake-2028573_640.jpg" alt="Duck">
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
 </div>
-
-<hr class="featurette-divider">
-
-<div class="row featurette">
-  <div class="col-md-7 col-md-push-5">
-    <h2 class="featurette-heading">Bills</h2>
-    <h3><span class="text-muted">Available in 12 sizes</span></h3>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
-      cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-  </div>
-  <div class="col-md-5 col-md-pull-7">
-    <img class="featurette-image img-responsive center-block" src="../../../assets/products/duck-525417_640.jpg" alt="Another Duck">
-  </div>
-</div>
-
-<hr class="featurette-divider">
-
-<div class="row featurette">
-  <div class="col-md-7">
-    <h2 class="featurette-heading">Webbed feet</h2>
-    <h3><span class="text-muted">Limited stocks</span></h3>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
-      cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-  </div>
-  <div class="col-md-5">
-    <img class="featurette-image img-responsive center-block" src="../../../assets/products/animal-200823_640.jpg" alt="Aww Duck">
-  </div>
-</div>
-
-<hr class="featurette-divider">
-
-<div class="row featurette">
-  <div class="col-md-7 col-md-push-5">
-    <h2 class="featurette-heading">Bills v2.0</h2>
-    <h3><span class="text-muted">Now available in 20 sizes</span></h3>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
-      cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-  </div>
-  <div class="col-md-5 col-md-pull-7">
-    <img class="featurette-image img-responsive center-block" src="../../../assets/products/duck-525417_640.jpg" alt="Another Duck">
-  </div>
-</div>
-
-<hr class="featurette-divider">
-
-<div class="row featurette">
-  <div class="col-md-7">
-    <h2 class="featurette-heading">Drake v2</h2>
-    <h3><span class="text-muted">Available in 25 colours</span></h3>
-    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
-      cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-  </div>
-  <div class="col-md-5">
-    <img class="featurette-image img-responsive center-block" src="../../../assets/products/drake-2028573_640.jpg" alt="Duck">
-  </div>
-</div>
-
-<hr class="featurette-divider">
