fix contact page

--- a/angular-src/src/app/components/about/about.component.html
+++ b/angular-src/src/app/components/about/about.component.html
@@ -7,7 +7,7 @@
 
 <h2>Businesses</h2>
 <hr>
-<div class="card-group clients-card-group">
+<div class="card-group borderless-cards clients-card-group">
   <div class="card col-lg-4 col-md-6">
     <img class="card-img-top" src="../../../assets/clients/animal-1260334_640.jpg" alt="Card image cap">
     <div class="card-block">
@@ -124,7 +124,7 @@
 
 <h2>Schools</h2>
 <hr>
-<div class="card-group clients-card-group">
+<div class="card-group borderless-cards clients-card-group">
   <div class="card col-lg-4">
     <img class="card-img-top" src="../../../assets/clients/labrador-805838_640.jpg" alt="Card image cap">
     <div class="card-block">
