--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -45,9 +45,9 @@
 
 <hr>
 
-<div class="container-fluid workflow">
-  <div class="card col-lg-3 center-div text-center">
-    <img class="card-img-top" src="../../../assets/home/workflow/1487785815_tick.png" alt="Card image cap">
+<div class="card-group justify-content-center borderless-cards">
+  <div class="card col-lg-3">
+    <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785815_tick.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Quality Assurance</h4>
       <p class="card-text">
@@ -55,8 +55,8 @@
       </p>
     </div>
   </div>
-  <div class="card col-lg-3 center-div text-center">
-    <img class="card-img-top" src="../../../assets/home/workflow/1487713729_forward.png" alt="Card image cap">
+  <div class="card col-lg-3">
+    <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487713729_forward.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Speedy Delivery</h4>
       <p class="card-text">
@@ -64,8 +64,8 @@
       </p>
     </div>
   </div>
-  <div class="card col-lg-3 center-div text-center">
-    <img class="card-img-top" src="../../../assets/home/workflow/1487785833_check-circle-outline-blank.png" alt="Card image cap">
+  <div class="card col-lg-3">
+    <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785833_check-circle-outline-blank.png" alt="Card image cap">
     <div class="card-block">
       <h4 class="card-title">Highly Customisable</h4>
       <p class="card-text">
