--- a/angular-src/src/app/components/contact/contact.component.html
+++ b/angular-src/src/app/components/contact/contact.component.html
@@ -1,65 +1,63 @@
-<div class="container center-div">
-  <h1>Contact us</h1>
-  <p class="lead">Do contact us if you have any queries, or would like to request for a quotation</p>
-  <p class="lead">
-    <span class="glyphicon glyphicon-envelope"></span> Email us:
-    <a href="mailto:example@mail.com" class="contact">
+<h1>
+  Contact us</h1>
+<p class="lead">Do contact us if you have any queries, or would like to request for a quotation</p>
+<p class="lead">
+  <span class="glyphicon glyphicon-envelope"></span> Email us:
+  <a href="mailto:example@mail.com" class="contact">
       example@mail.com
       </a>
-  </p>
-  <p class="lead">
-    <span class="glyphicon glyphicon-earphone"></span> Call us:
-    <a href="tel:+6596902296" class="contact">
+</p>
+<p class="lead">
+  <span class="glyphicon glyphicon-earphone"></span> Call us:
+  <a href="tel:+6596902296" class="contact">
       +65-9123-4567
       </a>
-  </p>
+</p>
 
-  <hr>
+<hr>
 
-  <div class="alert alert-success" *ngIf="submitSuccess">
-    <strong>Thank you for your message, we will get back to you promptly!</strong>
+<div class="alert alert-success" *ngIf="submitSuccess">
+  <strong>Thank you for your message, we will get back to you promptly!</strong>
+</div>
+
+<form (submit)="onFormSubmit()" [formGroup]="userForm">
+  <div class="form-group">
+    <label>Name</label>
+    <input type="text" class="form-control" formControlName="name" name="name" required>
   </div>
+  <div class="form-group">
+    <label>Email</label>
+    <input type="email" class="form-control" formControlName="email" name="email" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+  </div>
+  <div class="form-group">
+    <label>Message</label>
+    <textarea class="form-control" formControlName="message" name="comments" required></textarea>
+  </div>
+  <input type="submit" class="btn btn-primary btn-lg" value="Submit">
+</form>
 
-  <form (submit)="onFormSubmit()" [formGroup]="userForm">
-    <div class="form-group">
-      <label>Name</label>
-      <input type="text" class="form-control" formControlName="name" name="name" required>
+<hr>
+
+<div class="card-group borderless-cards social-cards">
+  <div class="card text-center col-lg-4">
+    <a href="http://fb.me" target="_blank" class="contact"></a>
+    <img class="mx-auto" src="../../../assets/social/1487690988_facebook_circle.png" alt="Facebook Logo" width="128" height="128">
+    <div class="card-block">
+      <h4 class="card-title">fb.me/example</h4>
     </div>
-    <div class="form-group">
-      <label>Email</label>
-      <input type="email" class="form-control" formControlName="email" name="email" required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+  </div>
+  <div class="card text-center col-lg-4">
+    <a href="https://www.instagram.com/" target="_blank" class="contact"></a>
+    <img class="mx-auto" src="../../../assets/social/1487691070_instagram.png" alt="Instagram Logo" width="128" height="128">
+    <div class="card-block">
+      <h4 class="card-title">@example</h4>
     </div>
-    <div class="form-group">
-      <label>Message</label>
-      <textarea class="form-control" formControlName="message" name="comments" required></textarea>
+  </div>
+  <div class="card text-center col-lg-4">
+    <a href="https://www.twitter.com/" target="_blank" class="contact"></a>
+    <img class="mx-auto" src="../../../assets/social/1487691095_twitter_circle_color.png" alt="Twitter Logo" width="128" height="128">
+    <div class="card-block">
+      <h4 class="card-title">@example</h4>
     </div>
-    <input type="submit" class="btn btn-primary btn-lg" value="Submit">
-  </form>
-
-
-  <hr>
-
-  <div class="container center-div social-cards">
-    <a href="http://fb.me/jefferey1230" target="_blank" class="contact">
-      <div class="col-lg-4 center-div text-center social-card">
-        <img class="img-circle" src="../../../assets/social/1487690988_facebook_circle.png" alt="Facebook Logo" width="128" height="128">
-        <h2 class="center-div">fb.me/example</h2>
-      </div>
-    </a>
-    <!-- /.col-lg-4 -->
-    <a href="https://www.instagram.com/paperplanestory/" target="_blank" class="contact">
-      <div class="col-lg-4 center-div text-center social-card">
-        <img class="img-circle" src="../../../assets/social/1487691070_instagram.png" alt="Instagram Logo" width="128" height="128">
-        <h2>@example</h2>
-      </div>
-    </a>
-    <!-- /.col-lg-4 -->
-    <a href="https://www.twitter.com/" target="_blank" class="contact">
-      <div class="col-lg-4 center-div text-center social-card">
-        <img class="img-circle" src="../../../assets/social/1487691095_twitter_circle_color.png" alt="Twitter Logo" width="128" height="128">
-        <h2>@example</h2>
-      </div>
-    </a>
-    <!-- /.col-lg-4 -->
   </div>
 </div>
