--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <!--home-->
         <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
           <a [routerLink]="['/']" class="nav-link">
-            <i class="fa fa-home"></i> Home
+            <i class="fa fa-home fa-lg"></i> Home
           </a>
         </li>
       </ul>
@@ -23,18 +23,18 @@
         <!--products-->
         <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
           <a [routerLink]="['/products']" class="nav-link">
-            <i class="fa fa-shopping-cart"></i> Products
+            <i class="fa fa-shopping-cart fa-lg"></i> Products
           </a>
         </li>
         <!--clients-->
         <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
           <a [routerLink]="['/about']" class="nav-link">
-            <i class="	fa fa-users"></i> Past Clients</a>
+            <i class="	fa fa-users fa-lg"></i> Past Clients</a>
         </li>
         <!--contact-->
         <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
           <a [routerLink]="['/contact']" class="nav-link">
-            <i class="fa fa-phone"></i> Contact Us</a>
+            <i class="fa fa-phone fa-lg"></i> Contact Us</a>
         </li>
       </ul>
       <!--/navbar right-->
