abstract views and views-routing

--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,15 @@
             <i class="fa fa-home fa-lg"></i> Home
           </a>
         </li>
+        <li class="nav-item dropdown" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
+          <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">Dropdown</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown01" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
+            <a [routerLink]="['/test']" class="dropdown-item nav-link">Temp</a>
+            <a [routerLink]="['/dashboard']" class="dropdown-item nav-link">Dashboard</a>
+            <a [routerLink]="['/test']" class="dropdown-item nav-link">Temp</a>
+          </div>
+        </li>
       </ul>
       <!--/navbar left-->
       <!--navbar right-->
