--- a/angular-src/src/app/components/navbar/navbar.component.scss
+++ b/angular-src/src/app/components/navbar/navbar.component.scss
@@ -23,4 +23,9 @@
         color: #000000;
         background-color: #eeeeee;
     }
+
+    .nav-item:focus {
+        color: #000000;
+        background-color: #eeeeee;
+    }
 }
