--- a/angular-src/src/app/components/views/home/home.component.html
+++ b/angular-src/src/app/components/views/home/home.component.html
@@ -6,30 +6,24 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img class="first-slide" src="../../../assets/home/carousel/trondheim-2074284_1280.jpg" alt="First slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <a class="btn btn-lg btn-primary" [routerLink]="['/about']" role="button">Learn More!</a>
-        </div>
+      <img class="d-block img-fluid" src="../../../assets/home/carousel/trondheim-2074284_1280.jpg" alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+        <p><a class="btn btn-lg btn-primary" [routerLink]="['/about']" role="button">Learn More!</a></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="second-slide" src="../../../assets/home/carousel/norway-2068857_1280_1280x731.jpg" alt="Second slide">
-      <div class="container">
-        <div class="carousel-caption d-none d-md-block">
-          <h1>Another example headline.</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
-            Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-        </div>
+      <img class="d-block img-fluid" src="../../../assets/home/carousel/norway-2068857_1280_1280x731.jpg" alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+        <h1>Another example headline.</h1>
+        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam
+          id dolor id nibh ultricies vehicula ut id elit.</p>
+        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
       </div>
     </div>
     <div class="carousel-item">
-      <img class="third-slide" src="../../../assets/home/carousel/nidaros-cathedral-2074343_1280_1280x731.jpg" alt="Third slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <a class="btn btn-lg btn-primary" [routerLink]="['/products']" role="button">Check it out!</a>
-        </div>
+      <img class="d-block img-fluid" src="../../../assets/home/carousel/nidaros-cathedral-2074343_1280_1280x731.jpg" alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+        <a class="btn btn-lg btn-primary" [routerLink]="['/products']" role="button">Check it out!</a>
       </div>
     </div>
   </div>
@@ -43,34 +37,36 @@
       </a>
 </div>
 
-<hr>
+<div class="container">
+  <hr>
 
-<div class="card-group justify-content-center borderless-cards">
-  <div class="card col-lg-3">
-    <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785815_tick.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Quality Assurance</h4>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk of the card's content.
-      </p>
+  <div class="card-group justify-content-center borderless-cards">
+    <div class="card col-lg-3">
+      <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785815_tick.png" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Quality Assurance</h4>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the bulk of the card's content.
+        </p>
+      </div>
     </div>
-  </div>
-  <div class="card col-lg-3">
-    <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487713729_forward.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Speedy Delivery</h4>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk of the card's content.
-      </p>
+    <div class="card col-lg-3">
+      <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487713729_forward.png" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Speedy Delivery</h4>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the bulk of the card's content.
+        </p>
+      </div>
     </div>
-  </div>
-  <div class="card col-lg-3">
-    <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785833_check-circle-outline-blank.png" alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Highly Customisable</h4>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk of the card's content.
-      </p>
+    <div class="card col-lg-3">
+      <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785833_check-circle-outline-blank.png" alt="Card image cap">
+      <div class="card-block">
+        <h4 class="card-title">Highly Customisable</h4>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the bulk of the card's content.
+        </p>
+      </div>
     </div>
   </div>
 </div>
