--- a/angular-src/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/angular-src/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -1,43 +1,32 @@
-<nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
-  <ul class="nav nav-pills flex-column">
-    <li class="nav-item">
-      <a class="nav-link active" href="#">Overview <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Reports</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Analytics</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Export</a>
-    </li>
-  </ul>
-
-  <ul class="nav nav-pills flex-column">
-    <li class="nav-item">
-      <a class="nav-link" href="#">Nav item</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Nav item againNav item againNav item again</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">One more nav</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Another nav item</a>
-    </li>
-  </ul>
-
-  <ul class="nav nav-pills flex-column">
-    <li class="nav-item">
-      <a class="nav-link" href="#">Nav item again</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">One more nav</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Another nav item</a>
-    </li>
-  </ul>
-</nav>
+<div class="dashboard-sidebar-wrapper">
+  <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+    <ul class="nav nav-pills flex-column">
+      <li class="nav-item">
+        <div class="container d-flex sidebar-top">
+          <a [routerLink]="['/']">
+            <div *ngIf="sidebarVisible">
+              <i class="fa fa-arrow-left fa-lg" aria-hidden="true"></i> Back to site
+            </div>
+          </a>
+          <a (click)="toggleSidebarState()">
+            <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+          </a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active">Overview <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link">
+          <i class="fa fa-pencil fa-lg" aria-hidden="true"></i>New post
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link">Pages</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link">Media</a>
+      </li>
+    </ul>
+  </nav>
+</div>
