--- a/angular-src/src/app/components/dashboard/sidebar/sidebar.component.scss
+++ b/angular-src/src/app/components/dashboard/sidebar/sidebar.component.scss
@@ -1,33 +1,46 @@
-.sidebar {
-  position: fixed;
-  top: 51px;
-  bottom: 0;
-  left: 0;
-  z-index: 1000;
-  padding: 20px;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  border-right: 1px solid #eee;
-}
+.dashboard-sidebar-wrapper {
+  .sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    border-right: 1px solid #eee;
+  }
 
-/* Sidebar navigation */
-.sidebar {
-  padding-left: 0;
-  padding-right: 0;
-}
+  /* Sidebar navigation */
+  .sidebar {
+    padding-left: 0;
+    padding-right: 0;
+  }
 
-.sidebar .nav {
-  margin-bottom: 20px;
-}
+  .sidebar .nav {
+    margin-bottom: 20px;
+  }
 
-.sidebar .nav-item {
-  width: 100%;
-}
+  .sidebar .nav-item {
+    width: 100%;
+  }
 
-.sidebar .nav-item + .nav-item {
-  margin-left: 0;
-}
+  .sidebar .nav-link {
+    border-radius: 0;
+  }
 
-.sidebar .nav-link {
-  border-radius: 0;
+  .sidebar-top {
+    justify-content: space-between;
+    padding: .5em 1em;
+  }
+
+  .fa {
+    padding: 0 0.2em;
+  }
+
+  .sidebar-expand {
+    position: relative;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
 }
