--- a/angular-src/src/app/components/dashboard/sidebar/sidebar.component.html
+++ b/angular-src/src/app/components/dashboard/sidebar/sidebar.component.html
@@ -1,31 +1,48 @@
 <div class="dashboard-sidebar-wrapper">
-  <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
+  <nav [ngClass]="{ 'sidebar-collapse': !sidebarVisible }" class="bg-faded sidebar sidebar-expand">
     <ul class="nav nav-pills flex-column">
       <li class="nav-item">
-        <div class="container d-flex sidebar-top">
+        <div class="d-flex sidebar-top-item">
           <a [routerLink]="['/']">
-            <div *ngIf="sidebarVisible">
-              <i class="fa fa-arrow-left fa-lg" aria-hidden="true"></i> Back to site
-            </div>
+            <label *ngIf="sidebarVisible" class="nav-link-text sidebar-top-item-text">
+              <i class="fa fa-arrow-left" aria-hidden="true"></i> Back to site
+            </label>
           </a>
-          <a (click)="toggleSidebarState()">
+          <a (click)="toggleSidebar()">
             <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
           </a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link active">Overview <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link">
-          <i class="fa fa-pencil fa-lg" aria-hidden="true"></i>New post
+      <hr>
+      <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}"  class="nav-item">
+        <a class="nav-link" [routerLink]="['/dashboard']">
+          <div class="d-flex sidebar-link-item">
+            <i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i>
+            <label *ngIf="sidebarVisible" class="nav-link-text">
+              Overview
+            </label>
+          </div>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link">Pages</a>
+      <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}"  class="nav-item">
+        <a class="nav-link" [routerLink]="['/dashboard/post']">
+          <div class="d-flex sidebar-link-item">
+            <i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i>
+            <label *ngIf="sidebarVisible" class="nav-link-text">
+            New post
+          </label>
+          </div>
+        </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link">Media</a>
+      <li [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}"  class="nav-item">
+        <a class="nav-link" [routerLink]="['/dashboard/media']">
+          <div class="d-flex sidebar-link-item">
+          <i class="fa fa-picture-o fa-lg" aria-hidden="true"></i>
+          <label *ngIf="sidebarVisible" class="nav-link-text">
+            Media
+          </label>
+          </div>
+        </a>
       </li>
     </ul>
   </nav>
