--- a/angular-src/src/app/components/dashboard/sidebar/sidebar.component.scss
+++ b/angular-src/src/app/components/dashboard/sidebar/sidebar.component.scss
@@ -1,13 +1,23 @@
 .dashboard-sidebar-wrapper {
+  height: 100%;
+
   .sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
+    height: 100%;
+    min-height: 100vh;
+    font-family: 'Roboto Slab';
     z-index: 1000;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
     border-right: 1px solid #eee;
+    line-height: 0;
+  }
+
+  .sidebar-expand {
+    width: 12em;
+  }
+
+  .sidebar-collapse {
+    width: 4em;
   }
 
   /* Sidebar navigation */
@@ -22,25 +32,51 @@
 
   .sidebar .nav-item {
     width: 100%;
+    height: 2.5em;
   }
 
   .sidebar .nav-link {
     border-radius: 0;
+    color: #000;
   }
 
-  .sidebar-top {
+  .sidebar-top-item {
     justify-content: space-between;
-    padding: .5em 1em;
+    padding: 1em 1em;
+
+    .sidebar-top-item-text {
+      font-size: 0.85em;
+      color: #000;
+    }
+
+    a:hover {
+      text-decoration: none;
+    }
   }
 
   .fa {
-    padding: 0 0.2em;
+    padding: 0 0.3em;
   }
 
-  .sidebar-expand {
-    position: relative;
-    -webkit-transition: all 0.4s ease-in-out;
-    -moz-transition: all 0.4s ease-in-out;
-    transition: all 0.4s ease-in-out;
+  label.nav-link-text {
+    cursor: inherit;
+    white-space: nowrap;
+  }
+
+  .sidebar-link-item {
+    flex-wrap: nowrap;
+    align-items: baseline;
+  }
+
+  hr {
+    border: 1px solid #ddd;
+    width: 90%;
+  }
+
+  /* Sidebar expand-collapse animation */
+  .sidebar {
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
   }
 }
