--- a/angular-src/src/app/components/dashboard/post/post.component.html
+++ b/angular-src/src/app/components/dashboard/post/post.component.html
@@ -1,2 +1,24 @@
-<h1>New Post</h1>
-<div [froalaEditor]>Hello, Froala!</div>
+<div class="post-container-wrapper">
+    <br>
+    <input type="text" [(ngModel)]="postTitle" class="form-control post-title" id="postTitle" placeholder="Title">
+    <div [froalaEditor]=froalaOptions [(froalaModel)]="editorContent"></div>
+    <div class="d-flex editor-control">
+        <p class="text-muted">{{lastAutoSave}}</p>
+        <div class="editor-buttons">
+            <button class="btn btn-danger">
+                <i class="fa fa-trash-o fa-lg"></i> Delete
+            </button>
+            <button type="button" class="btn btn-secondary">
+                <i class="fa fa-eye fa-lg"></i> Preview
+            </button>
+            <button type="button" class="btn btn-primary">
+                <i class="fa fa-book fa-lg"></i> Publish
+            </button>
+        </div>
+    </div>
+    <h3>Parsed view</h3>
+    {{postTitle}}
+    <div [innerHTML]="editorContent"></div>
+    <h3>Raw view</h3>
+    {{editorContent}}
+</div>
