fix navbar active color

--- a/angular-src/src/app/components/views/navbar/navbar.component.html
+++ b/angular-src/src/app/components/views/navbar/navbar.component.html
@@ -16,7 +16,7 @@
             <i class="fa fa-home fa-lg"></i> Home
           </a>
         </li>
-        <li class="nav-item dropdown" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
+        <li class="nav-item dropdown dropdown-parent" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
           <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
