--- a/angular-src/src/app/components/dashboard/post/post.component.html
+++ b/angular-src/src/app/components/dashboard/post/post.component.html
@@ -9,7 +9,7 @@
             <button class="btn btn-danger">
                 <i class="fa fa-trash-o fa-lg"></i> Delete
             </button>
-            <button type="button" class="btn btn-secondary">
+            <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#postPreviewModal">
                 <i class="fa fa-eye fa-lg"></i> Preview
             </button>
             <button type="button" class="btn btn-primary">
@@ -17,9 +17,26 @@
             </button>
         </div>
     </div>
-    <h3>Parsed view</h3>
-    {{postTitle}}
-    <div [innerHTML]="form.controls.editor.value"></div>
     <h3>Raw view</h3>
     {{form.controls.editor.value}}
+
+    <div class="modal fade" id="postPreviewModal" tabindex="-1" role="dialog" aria-labelledby="postPreviewModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="postPreviewModalLabel">Page Preview</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    {{postTitle}}
+                    <div [innerHTML]="form.controls.editor.value"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
