add core module

--- a/angular-src/src/app/components/views/navbar/navbar.component.html
+++ b/angular-src/src/app/components/views/navbar/navbar.component.html
@@ -20,9 +20,9 @@
           <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
-            <a [routerLink]="['/test']" class="dropdown-item nav-link">Temp</a>
             <a [routerLink]="['/dashboard']" class="dropdown-item nav-link">Dashboard</a>
-            <a [routerLink]="['/test']" class="dropdown-item nav-link">Temp</a>
+            <a [routerLink]="['/featurereel']" class="dropdown-item nav-link">Feature Reel</a>
+            <a [routerLink]="['/blogpost']" class="dropdown-item nav-link">Blogpost</a>
           </div>
         </li>
       </ul>
