--- a/angular-src/src/app/components/dashboard/sidebar/sidebar.component.scss
+++ b/angular-src/src/app/components/dashboard/sidebar/sidebar.component.scss
@@ -5,7 +5,7 @@
     height: 100%;
     min-height: 100vh;
     font-size: 1.2em;
-    font-family: 'Roboto Slab';
+    font-family: sans-serif;
     z-index: 1000;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
