--- a/angular-src/src/app/components/dashboard/posts/posts.component.html
+++ b/angular-src/src/app/components/dashboard/posts/posts.component.html
@@ -1,7 +1,4 @@
-<!--<div *ngFor="let p of posts">
-  {{p.id}}
-</div>-->
-<bouncing-loader *ngIf="!post"></bouncing-loader>
-<div *ngIf="post">
-  <blogpost [blogpost]="post"></blogpost>
+<bouncing-loader *ngIf="!posts"></bouncing-loader>
+<div *ngIf="posts">
+  <blogpost *ngFor="let post of posts" [blogpost]="post"></blogpost>
 </div>
