--- a/angular-src/src/app/components/core/components/blogpost/blogpost.component.html
+++ b/angular-src/src/app/components/core/components/blogpost/blogpost.component.html
@@ -5,7 +5,6 @@
   </div>
 
   <hr>
-  {{blogpost.id}}
   <div class="blogpost-body" [innerHTML]="blogpost.content | safeHtml">
   </div>
 
@@ -18,14 +17,17 @@
     <div class="blogpost-sharing">
       <br>
       <button class="btn btn-outline-secondary share-button">
-          <i class="fa fa-facebook-square" aria-hidden="true"></i>
-        </button>
+        <i class="fa fa-facebook-square" aria-hidden="true"></i>
+      </button>
       <button class="btn btn-outline-secondary share-button">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </button>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </button>
       <button class="btn btn-outline-secondary share-button">
-          <i class="fa fa-pinterest" aria-hidden="true"></i>
-        </button>
+        <i class="fa fa-twitter" aria-hidden="true"></i>
+      </button>
+      <button class="btn btn-outline-secondary share-button">
+        <i class="fa fa-pinterest" aria-hidden="true"></i>
+      </button>
     </div>
   </div>
 
