add rejection handling to password hashing

--- a/angular-src/src/app/components/core/components/blogpost/blogpost.component.html
+++ b/angular-src/src/app/components/core/components/blogpost/blogpost.component.html
@@ -12,7 +12,9 @@
 
   <div class="blogpost-footer">
     <div class="blogpost-tags text-muted">
-      <span *ngFor="let tag of blogpost.tags" class="blogpost-tag">{{tag}}</span>
+      <span *ngFor="let tag of blogpost.tags" class="blogpost-tag">
+        {{tag}}
+      </span>
     </div>
     <div class="blogpost-sharing">
       <br>
