--- a/angular-src/src/app/components/core/components/blogpost/blogpost.component.scss
+++ b/angular-src/src/app/components/core/components/blogpost/blogpost.component.scss
@@ -19,6 +19,10 @@
   }
 
   .blogpost-footer {
+    .blogpost-tag {
+      margin-right: 0.5em;
+      cursor: pointer;
+    }
 
     .blogpost-sharing {
       .share-button {
