--- a/angular-src/src/app/components/views/home/list-posts/list-posts.component.html
+++ b/angular-src/src/app/components/views/home/list-posts/list-posts.component.html
@@ -1,4 +1,6 @@
-<bouncing-loader *ngIf="!posts"></bouncing-loader>
-<div *ngIf="posts">
-  <blogpost *ngFor="let post of posts" [blogpost]="post"></blogpost>
+<div class="list-posts-container-wrapper">
+  <bouncing-loader *ngIf="!posts"></bouncing-loader>
+  <div *ngIf="posts">
+    <blogpost *ngFor="let post of posts" [blogpost]="post" class="blogpost"></blogpost>
+  </div>
 </div>
