add login component

--- a/angular-src/src/app/components/views/navbar/navbar.component.html
+++ b/angular-src/src/app/components/views/navbar/navbar.component.html
@@ -22,7 +22,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdown01" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
             <a [routerLink]="['/dashboard']" class="dropdown-item nav-link">Dashboard</a>
             <a [routerLink]="['/featurereel']" class="dropdown-item nav-link">Feature Reel</a>
-            <a [routerLink]="['/blogpost']" class="dropdown-item nav-link">Blogpost</a>
+            <a [routerLink]="['/auth/login']" class="dropdown-item nav-link">Login</a>
           </div>
         </li>
       </ul>
