set authguard for dashboard component

--- a/angular-src/src/app/components/auth/login/login.component.html
+++ b/angular-src/src/app/components/auth/login/login.component.html
@@ -5,6 +5,6 @@
     <label for="inputPassword" class="sr-only">Password</label>
     <input [(ngModel)]="form.password" type="password" name="password" class="form-control" placeholder="Password" required>
     <p [ngClass]="{'message-hidden': !formHasError}" class="error-message">Invalid credentials!</p>
-    <button (click)="loginForm.reset()" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   </form>
 </div>
