--- a/angular-src/src/app/components/dashboard/create-post/create-post.component.html
+++ b/angular-src/src/app/components/dashboard/create-post/create-post.component.html
@@ -1,4 +1,4 @@
-<div class="post-container-wrapper">
+<div class="dashboard-create-post-conponent-container">
     <input type="text" [(ngModel)]="postTitle" class="form-control post-title" id="postTitle" placeholder="Title">
     <form [formGroup]="form">
         <quill-editor #editor formControlName="editor"></quill-editor>
