--- a/angular-src/src/app/components/dashboard/create-post/create-post.component.scss
+++ b/angular-src/src/app/components/dashboard/create-post/create-post.component.scss
@@ -1,4 +1,4 @@
-.post-container-wrapper {
+.dashboard-create-post-conponent-container {
     .editor-control {
         margin: 1em 0;
         justify-content: space-between;
