--- a/angular-src/src/app/components/dashboard/posts/posts.component.html
+++ b/angular-src/src/app/components/dashboard/posts/posts.component.html
@@ -1,4 +1,6 @@
-<bouncing-loader *ngIf="!posts"></bouncing-loader>
-<div *ngIf="posts">
-  <blogpost *ngFor="let post of posts" [blogpost]="post"></blogpost>
+<div class="dashboard-posts-component-wrapper">
+  <bouncing-loader *ngIf="!posts"></bouncing-loader>
+  <div *ngIf="posts">
+    <blogpost *ngFor="let post of posts" [blogpost]="post"></blogpost>
+  </div>
 </div>
