--- a/angular-src/src/app/components/views/contact/contact.component.scss
+++ b/angular-src/src/app/components/views/contact/contact.component.scss
@@ -1,5 +1,7 @@
-.card > a {
+.contact-component-wrapper {
+  .card > a {
     position: absolute;
     top: 0; left: 0;
     height: 100%; width: 100%;
+  }
 }
