--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
-<div class="d-flex">
-  <app-sidebar></app-sidebar>
-  <div class="dashboard-views-container">
-    <br>
-    <router-outlet></router-outlet>
+<div class="dashboard-component-wrapper">
+  <div class="d-flex">
+    <app-sidebar></app-sidebar>
+    <div class="dashboard-views-container">
+      <br>
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
