--- a/angular-src/src/app/components/dashboard/dashboard.component.scss
+++ b/angular-src/src/app/components/dashboard/dashboard.component.scss
@@ -1,4 +1,6 @@
-.dashboard-views-container {
-  width: 60%;
-  margin: 0 auto;
+.dashboard-component-wrapper {
+  .dashboard-views-container {
+    width: 60%;
+    margin: 0 auto;
+  }
 }
