--- a/angular-src/src/app/components/page-not-found/page-not-found.component.html
+++ b/angular-src/src/app/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,3 @@
-<div class="d-flex page-not-found-wrapper">
+<div class="d-flex page-not-found-container">
   <div class="page-not-found-content">404</div>
 </div>
