--- a/angular-src/src/app/components/views/home/home.component.html
+++ b/angular-src/src/app/components/views/home/home.component.html
@@ -1,73 +1,75 @@
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner" role="listbox">
-    <div class="carousel-item active">
-      <img class="d-block img-fluid" src="../../../assets/home/carousel/trondheim-2074284_1280.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-        <p><a class="btn btn-lg btn-primary" [routerLink]="['/about']" role="button">Learn More!</a></p>
+<div class="home-component-wrapper">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active">
+        <img class="d-block img-fluid carousel-img" src="../../../assets/home/carousel/trondheim-2074284_1280.jpg" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+          <p><a class="btn btn-lg btn-primary" [routerLink]="['/about']" role="button">Learn More!</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block img-fluid carousel-img" src="../../../assets/home/carousel/norway-2068857_1280_1280x731.jpg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+          <h1>Another example headline.</h1>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.
+            Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img class="d-block img-fluid carousel-img" src="../../../assets/home/carousel/nidaros-cathedral-2074343_1280_1280x731.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+          <a class="btn btn-lg btn-primary" [routerLink]="['/products']" role="button">Check it out!</a>
+        </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="../../../assets/home/carousel/norway-2068857_1280_1280x731.jpg" alt="Second slide">
-      <div class="carousel-caption d-none d-md-block">
-        <h1>Another example headline.</h1>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam
-          id dolor id nibh ultricies vehicula ut id elit.</p>
-        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block img-fluid" src="../../../assets/home/carousel/nidaros-cathedral-2074343_1280_1280x731.jpg" alt="Third slide">
-      <div class="carousel-caption d-none d-md-block">
-        <a class="btn btn-lg btn-primary" [routerLink]="['/products']" role="button">Check it out!</a>
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-</div>
+  </div>
 
-<div class="container">
-  <hr>
+  <div class="container">
+    <hr>
 
-  <div class="card-group justify-content-center borderless-cards">
-    <div class="card col-lg-3">
-      <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785815_tick.png" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Quality Assurance</h4>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the bulk of the card's content.
-        </p>
+    <div class="card-group justify-content-center borderless-cards">
+      <div class="card col-lg-3">
+        <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785815_tick.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Quality Assurance</h4>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="card col-lg-3">
-      <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487713729_forward.png" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Speedy Delivery</h4>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the bulk of the card's content.
-        </p>
+      <div class="card col-lg-3">
+        <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487713729_forward.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Speedy Delivery</h4>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="card col-lg-3">
-      <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785833_check-circle-outline-blank.png" alt="Card image cap">
-      <div class="card-block">
-        <h4 class="card-title">Highly Customisable</h4>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the bulk of the card's content.
-        </p>
+      <div class="card col-lg-3">
+        <img class="card-img-top mx-auto" src="../../../assets/home/workflow/1487785833_check-circle-outline-blank.png" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Highly Customisable</h4>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the bulk of the card's content.
+          </p>
+        </div>
       </div>
     </div>
   </div>
+  <list-posts></list-posts>
 </div>
-<list-posts></list-posts>
