--- a/angular-src/src/app/components/views/home/home.component.scss
+++ b/angular-src/src/app/components/views/home/home.component.scss
@@ -1,6 +1,8 @@
-.carousel {
-    img {
-        width: 100%;
-        height: 100%;
+.home-component-wrapper {
+  .carousel {
+    .carousel-img {
+      width: 100%;
+      height: 100%;
     }
+  }
 }
