add publish post functionality

--- a/angular-src/src/app/components/dashboard/create-post/create-post.component.html
+++ b/angular-src/src/app/components/dashboard/create-post/create-post.component.html
@@ -12,7 +12,7 @@
             <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#postPreviewModal">
                 <i class="fa fa-eye fa-lg"></i> Preview
             </button>
-            <button type="button" class="btn btn-primary">
+            <button (click)="publishPost()" type="button" class="btn btn-primary">
                 <i class="fa fa-book fa-lg"></i> Publish
             </button>
         </div>
