clean up autosave and add deleteDraft function

--- a/angular-src/src/app/components/core/components/wysiwyg/wysiwyg.component.html
+++ b/angular-src/src/app/components/core/components/wysiwyg/wysiwyg.component.html
@@ -12,7 +12,7 @@
         <div *ngIf="blogpost">
             <div class="d-flex editor-control">
                 <p class="text-muted">
-                    Last autosave: {{blogpost.lastAutosave}}
+                    Last autosave: {{lastAutosave}}
                 </p>
                 <div class="editor-buttons">
                     <button class="btn btn-danger">
