--- a/angular-src/src/app/components/core/components/wysiwyg/wysiwyg.component.html
+++ b/angular-src/src/app/components/core/components/wysiwyg/wysiwyg.component.html
@@ -43,7 +43,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        {{postTitle}}
+                        {{blogpost.title}}
                         <div [innerHTML]="form.controls.editor.value"></div>
                     </div>
                     <div class="modal-footer">
